Score chart added

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,8 +3,18 @@
         <title>Draw app</title>
     </head>
     <body>
-        <script src="index.ts">
-            
-        </script>
+        <script src="index.ts"></script>
+        <div class='scores'>
+            <p class='userScoreP'>User score now: 0</p>
+            <p class='userAttemptP'>User attempt: 0</p>
+            <p class='aiScoreP'>AI score now: 0</p>
+            <p class='userTimeP'>User time: 0</p>
+        </div>
+
+        <div class='line-chart-div'>
+            <svg class='line-chart'></svg>
+        </div>
+        
+
     </body>
 </html>
