multiple level enabled

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -34,19 +34,19 @@
                 <article class="game_card">
                     <div class="tagline">
                         <span class="tagline_font"> Solve the harmonic oscillator in less than 60 sec.</span>
-                        <button class="button_with_shadow">Ready ?</button>
+                        <button id="harm_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
                         <span class="tagline_font"> Solve the Morse Potential in less than 60 sec.</span>
-                        <button class="button_with_shadow">Ready ?</button>
+                        <button id="morse_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
                         <span class="tagline_font"> Solve the Double well in less than 60 sec.</span>
-                        <button class="button_with_shadow">Ready ?</button>
+                        <button id="double_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
             </div>
