toggle AI button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -55,6 +55,7 @@
             <div class="top_bar">
                 <div class='games_button'>
                     <button id="close_game_button" class="button_with_shadow">X</button>
+                    <button id="toggle_ai_button" class="button_with_shadow">toggle AI</button>
                 </div>
                 <div class='scores'>
                     <p class='userScoreP'>User score now: 0</p>
