toggle speed AI button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -56,6 +56,7 @@
                 <div class='games_button'>
                     <button id="close_game_button" class="button_with_shadow">X</button>
                     <button id="toggle_ai_button" class="button_with_shadow">toggle AI</button>
+                    <button id="toggle_ai_speed_button" class="button_with_shadow">AI speed</button>
                 </div>
                 <div class='scores'>
                     <p class='userScoreP'>User score now: 0</p>
