return to splash view

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,19 +33,19 @@
             <div class="cards">
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the harmonic oscillator in less than 60 sec.</span>
+                        <span class="tagline_font"> Solve the harmonic oscillator in less than 30 sec.</span>
                         <button id="harm_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the Morse Potential in less than 60 sec.</span>
+                        <span class="tagline_font"> Solve the Morse Potential in less than 30 sec.</span>
                         <button id="morse_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the Double well in less than 60 sec.</span>
+                        <span class="tagline_font"> Solve the Double well in less than 30 sec.</span>
                         <button id="double_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
@@ -54,16 +54,18 @@
         <section id="game_view">
             <div class="top_bar">
                 <div class='games_button'>
-                    <button id="close_game_button" class="button_with_shadow">X</button>
-                    <button id="toggle_ai_button" class="button_with_shadow">toggle AI</button>
-                    <button id="toggle_ai_speed_button" class="button_with_shadow">AI speed</button>
+                    <button id="close_game_button" class="button_with_shadow">close</button>
+                    <button id="change_level_button" class="button_with_shadow">change level</button>
+                    <button id="toggle_ai_button" class="button_with_shadow">toggle AI view</button>
+                    <button id="toggle_ai_speed_button" class="button_with_shadow">change AI speed</button>
                 </div>
-                <div class='scores'>
+
+                <!-- <div class='scores'>
                     <p class='userScoreP'>User score now: 0</p>
                     <p class='userAttemptP'>User attempt: 0</p>
                     <p class='aiScoreP'>AI score now: 0</p>
                     <p class='userTimeP'>User time: 0</p>
-                </div>
+                </div> -->
             </div>
 
             <div id='canvas_view'>
