change logo to html to facilitate viz on hpc cloud

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,7 +22,8 @@
     </header>
     <div class="container">
         <section id="splash_view" class="visible">
-            <div id="splashView_logo"></div>
+            
+            <div id="splashView_logo"><img src="images/quantum_logo.png" /></div>
             <div class="tagline">
                 <span class="tagline_font"> Can you solve quantum mechanical problems faster than a neural
                     network?</span>
