--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -63,6 +63,7 @@
                     <button id="change_level_button" class="button_with_shadow">change level</button>
                     <button id="toggle_ai_button" class="button_with_shadow">toggle AI view</button>
                     <button id="toggle_ai_speed_button" class="button_with_shadow">change AI speed</button>
+                    <button id="toggle_hint_button" class="button_with_shadow">toggle hint</button>
                 </div>
 
             </div>
