change layout, fix canvas.height bug

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <section id="game_view">
-            <div class="top_bar">
+            <div id="top_bar_id" class="top_bar">
                 
                 <div class='games_button'>
                     <button id="close_game_button" class="button_with_shadow">close</button>
