changed ready screen looks

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,8 +26,8 @@
             
             <div id="splashView_logo"><img src="images/quantum_logo.png" /></div>
             <div class="tagline">
-                <span class="tagline_font"> Can you solve quantum mechanical problems faster than a neural
-                    network?</span>
+                <span class="tagline_font"> Draw the solution of quantum mechanical problems faster than a neural
+                    network</span>
                 <button id="start_button" class="button_with_shadow">Let's start</button>
             </div>
         </section>
@@ -36,21 +36,22 @@
             <div class="cards">
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the harmonic oscillator in less than 30 sec.</span>
+                        <span class="tagline_font"> Draw the ground state of the Harmonic Oscillator</span>
                         <button id="harm_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the Morse Potential in less than 30 sec.</span>
+                        <span class="tagline_font"> Draw the ground state of the Morse Potential</span>
                         <button id="morse_button" class="button_with_shadow">Ready ?</button>
                     </div>
                 </article>
                 <article class="game_card">
                     <div class="tagline">
-                        <span class="tagline_font"> Solve the Double well in less than 30 sec.</span>
+                        <span class="tagline_font">  Draw the ground state of the Double Well (H2+)</span>
                         <button id="double_button" class="button_with_shadow">Ready ?</button>
                     </div>
+
                 </article>
             </div>
         </section>
